<resources>
    <string name="app_name" translatable="false">FlagQuizBySilentCoast</string>

    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="guess_the_country">Guess the Country</string>
    <string name="question_1_of_10">Question 1 of 10</string>
    <string name="flag_quiz" translatable="false">Flag Quiz</string>
    <string name="hints_are_not_available">Hints are not available for this country</string>
    <string name="question_n_of_10">Question %1$s of 10</string>
    <string name="difficulty">Difficulty</string>
    <string name="number_of_answer_options">Number of answer options</string>
    <string name="region">Region</string>
    <string name="content_of_questions">Content of questions</string>
    <string name="whole_world">Whole world</string>
    <string name="other">Other</string>
    <string name="delay_after_answer">Delay after answer (sec)</string>
    <string name="quiz_is_over">Quiz is over</string>
    <string name="correct_answers_n_of_10">Correct answers: %1$d/10</string>
    <string name="start_new_quiz">Start new quiz</string>

</resources>